# quaternion

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: quaternion.hpp
src/: test.cpp  test_quaternion.cpp
